oop_mro/tests/trybuild/fail_ambiguous_generic_same_specialization.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Slot` in class `Diamond`: normal `as_slot` accessors are omitted; use type-directed via accessors such as `as_base_via::<Left, Slot < i32 >>()`, `as_base_via::<Right, Slot < i32 >>()`
  --> tests/trybuild/fail_ambiguous_generic_same_specialization.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Slot<T> {
 5 | |         value: Option<T> = None,
...  |
 9 | |     class Diamond: Left, Right {}
10 | | }
   | |_^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Diamond: AsSlot<i32>` is not satisfied
  --> tests/trybuild/fail_ambiguous_generic_same_specialization.rs:14:14
   |
14 |     let _ = <Diamond as AsSlot<i32>>::as_slot(&diamond);
   |              ^^^^^^^ unsatisfied trait bound
   |
help: the trait `AsSlot<i32>` is not implemented for `Diamond`
  --> tests/trybuild/fail_ambiguous_generic_same_specialization.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Slot<T> {
 5 | |         value: Option<T> = None,
...  |
 8 | |     class Right: Slot<i32> {}
 9 | |     class Diamond: Left, Right {}
   | |_________________^
   = help: the following other types implement trait `AsSlot<T>`:
             `Left` implements `AsSlot<i32>`
             `Right` implements `AsSlot<i32>`
             `Slot<T>` implements `AsSlot<T>`
             `__oop_OwnedDowncast_slot_1_0_1_0_0` implements `AsSlot<i32>`
             `__oop_OwnedDowncast_slot_2_0_2_0_0` implements `AsSlot<i32>`
             `__oop_OwnedDowncast_slot_3_0_1_0_1` implements `AsSlot<i32>`
             `__oop_OwnedDowncast_slot_3_0_2_0_1` implements `AsSlot<i32>`
             `__oop_OwnedVia_Concrete_3_3_0` implements `AsSlot<i32>`
           and $N others
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
